<resources>
    <string name="app_name">TeamworkTechDemo</string>
    <string name="fragment_not_created_message">New fragment should have been created</string>
    <string name="add_project">Create new project</string>
    <string name="project_description">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue cheese caerphilly bavarian bergkase cheese and biscuits mascarpone.</string>
    <string name="messages">Messages</string>
    <string name="messages_description">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue cheese caerphilly bavarian bergkase cheese and biscuits mascarpone.</string>
    <string name="milestones">Milestones</string>
    <string name="milestones_description">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue cheese caerphilly bavarian bergkase cheese and biscuits mascarpone.</string>
    <string name="people">People</string>
    <string name="people_description">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue cheese caerphilly bavarian bergkase cheese and biscuits mascarpone.></string>
    <string name="task_title">Do stuff</string>
    <string name="task_description">New task added</string>
    <string name="task_id">Task ID:</string>
    <string name="progress">Progress:</string>
    <string name="responsible">Responsible:</string>
    <string name="start_date">Start date:</string>
    <string name="task_list">Task list:</string>
    <string name="project_name">Project name:</string>
    <string name="created_by">Created by:</string>
    <string name="created_on">Created on:</string>
    <string name="last_modified">Last modified:</string>
    <string name="access">Access:</string>
    <string name="following">Following:</string>
    <string name="no_project_selected">No project selected</string>
    <string name="add_project_title_hint">Title accepts #tag or #[big tag]</string>
    <string name="add_project_tdescription_hint">Description</string>
    <string name="company">Company:</string>
    <string name="tags">Tags:</string>
    <string name="category">Category:</string>
    <string name="start_date_label">Start date</string>
    <string name="end_date">End date:</string>
    <string name="save_project">Save project</string>
    <string name="task_detail_name_concat">%s %s</string>
    <string name="project_load_failed">Failed to load projects</string>
    <string name="retry">Retry</string>
    <string name="projects">Projects</string>
    <string name="tasks">Tasks</string>
    <string name="create_project_title">Create project</string>

    <string-array name="default_spinner_value">
        <item>No project selected</item>
    </string-array>
</resources>
