<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/add_project_add_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:ems="10"
            android:hint="@string/add_project_title_hint"
            android:inputType="text"
            android:padding="@dimen/margin_normal" />

        <EditText
            android:id="@+id/add_project_add_description"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_margin="@dimen/margin_small"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/add_project_tdescription_hint"
            android:inputType="textMultiLine"
            android:paddingEnd="@dimen/margin_normal"
            android:paddingStart="@dimen/margin_normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_normal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/add_project_segment_height"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/margin_xsmall">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/company"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/add_project_company_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/add_project_segment_weight_half" />
            </LinearLayout>

            <include layout="@layout/divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/add_project_segment_height"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/margin_xsmall">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tags"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/add_project_tags_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/add_project_segment_weight_half" />

            </LinearLayout>

            <include layout="@layout/divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/add_project_segment_height"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/margin_xsmall">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/add_project_segment_weight_one"
                    android:text="@string/category"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/add_project_category_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/add_project_segment_weight_half" />

            </LinearLayout>

            <include layout="@layout/divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/add_project_segment_height"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/margin_xsmall">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/add_project_segment_weight_one"
                    android:text="@string/start_date"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/add_project_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/add_project_segment_weight_half"
                    android:gravity="end"
                    android:hint="@string/start_date_label" />

            </LinearLayout>

            <include layout="@layout/divider" />

            <LinearLayout
                android:id="@+id/end_date"
                android:layout_width="match_parent"
                android:layout_height="@dimen/add_project_segment_height"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/margin_xsmall">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/add_project_segment_weight_one"
                    android:text="@string/end_date"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/add_project_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="@dimen/add_project_segment_weight_half"
                    android:gravity="end"
                    android:hint="@string/start_date" />

            </LinearLayout>

            <include layout="@layout/divider" />

            <Button
                android:id="@+id/add_project_save_project_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="@dimen/margin_small"
                android:text="@string/save_project" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>