<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/content_root"
    android:focusable="true"
    android:focusableInTouchMode="true"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginBottom="@dimen/card_margin"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin"
        android:elevation="5dp"
        android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/add_project_add_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:ems="10"
            android:gravity="end"
            android:hint="@string/add_project_title_hint"
            android:inputType="text"
            android:padding="@dimen/margin_medium" />

        <EditText
            android:id="@+id/add_project_add_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:ems="10"
            android:gravity="end"
            android:hint="@string/add_project_tdescription_hint"
            android:inputType="textMultiLine"
            android:paddingEnd="@dimen/margin_medium"
            android:paddingStart="@dimen/margin_medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/add_project_segment_height"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="@dimen/margin_xsmall">

                <TextView
                    style="@style/add_project_label"
                    android:text="@string/company" />

                <Spinner
                    android:id="@+id/add_project_company_spinner"
                    style="@style/add_project_spinner" />

            </LinearLayout>

            <include layout="@layout/divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/add_project_segment_height"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/margin_xsmall">

                <TextView
                    style="@style/add_project_label"
                    android:text="@string/tags" />

                <Spinner
                    android:id="@+id/add_project_tags_spinner"
                    style="@style/add_project_spinner" />

            </LinearLayout>

            <include layout="@layout/divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/add_project_segment_height"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/margin_xsmall">

                <TextView
                    style="@style/add_project_label"
                    android:text="@string/category" />

                <Spinner
                    android:id="@+id/add_project_category_spinner"
                    style="@style/add_project_spinner" />

            </LinearLayout>

            <include layout="@layout/divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/add_project_segment_height"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/margin_xsmall">

                <TextView
                    style="@style/add_project_label"
                    android:text="@string/start_date"/>

                <TextView
                    android:id="@+id/add_project_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="end"
                    android:hint="@string/start_date_label" />

            </LinearLayout>

            <include layout="@layout/divider" />

            <LinearLayout
                android:id="@+id/end_date"
                android:layout_width="match_parent"
                android:layout_height="@dimen/add_project_segment_height"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/margin_xsmall">

                <TextView
                    style="@style/add_project_label"
                    android:text="@string/end_date" />

                <TextView
                    android:id="@+id/add_project_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="end"
                    android:hint="@string/end_date" />

            </LinearLayout>

            <include layout="@layout/divider" />

            <Button
                android:id="@+id/add_project_save_project_button"
                android:layout_width="match_parent"
                android:background="@color/button_background"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_small"
                android:text="@string/save_project" />

        </LinearLayout>
    </LinearLayout>

    </android.support.v7.widget.CardView>

    <include
        android:id="@+id/progress_bar"
        layout="@layout/progressbar_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="visible"/>

</RelativeLayout>